# wotto

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/c/: Makefile  README.md  foo.c  foo.h  rusto.c  rusto.h  wotto.c  wotto.h
irc/: Cargo.toml
irc/src/client/: conn.rs  transport.rs
rustico/: Cargo.toml
rustico-cli/: Cargo.toml
rustico-cli/src/: main.rs
rustico/src/: assemblyscript.rs  lib.rs  registry.rs  repl.rs  runtime.rs  service.rs  webload.rs
rustico/src/webload/: gist.rs  mod.rs
rusto-irc/: Cargo.toml
rusto-irc/src/: bot.rs  main.rs  parsing.rs  tracing.rs
rusto-utils/: Cargo.toml
rusto-utils/src/: debug.rs
wotto-cli/: Cargo.toml
wotto-cli/src/: main.rs
wotto-engine/: Cargo.toml
wotto-engine/src/: assemblyscript.rs  lib.rs  names.rs  registry.rs  repl.rs  runtime.rs  service.rs
wotto-engine/src/webload/: builtin.rs  gist.rs  mod.rs
wotto-irc/: Cargo.toml
wotto-irc/src/: bot.rs  main.rs  parsing.rs  throttling.rs  tracing.rs
wotto-utils/: Cargo.toml
wotto-utils/src/: debug.rs
