[package]
name = "rustico"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustico"

[dependencies]
anyhow = "1.0.70"
rustyline = { version = "11.0.0", optional = true }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
wasmtime = "7"
reqwest = { version = "0.11", features = ["json"] }
url = "2.3"
lazy_static = "1.4.0"
tracing = "*"
serde_json = "*"
itertools = "0.10"
parking_lot = "*"

[features]
repl = ["rustyline"]
