[package]
name = "rusto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
irc = "0.15.0"
tokio = { version = "1.26.0", features = ["full"] }
rustico = { path = "../rustico" }
warp = { version = "0.3", default-features = false }
nom = "7"
