[package]
name = "rusto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.27"
irc = "0.15.0"
tokio = { version = "1.26.0", features = ["full"] }
rustico = { path = "../rustico" }
warp = { version = "0.3", default-features = false }
nom = "7"
leaky-bucket = "0.12.4"
rusto-utils = { path = "../rusto-utils" }

# tracing
tracing-subscriber = "0.3"
console-subscriber = "0.1"
tracing = "0.1.37"

# telemetry
opentelemetry = "0.17.0"
tracing-opentelemetry = "0.17.2" 
opentelemetry-jaeger = "0.16.0"
