[package]
name = "rusto"
version = "0.1.0"
edition = "2021"

[features]
default = ["default-tracing"]

tracing = ["dep:tracing-subscriber"]

default-tracing = ["tracing", "tokio-console", "stderr-tracing", "telemetry"]

tokio-console = ["tracing", "dep:console-subscriber"]

stderr-tracing = ["tracing"]

telemetry = ["tracing", "dep:opentelemetry", "dep:tracing-opentelemetry", "dep:opentelemetry-jaeger"]

[dependencies]
futures = "0.3.27"
irc = "0.15.0"
tokio = { version = "1.26.0", features = ["full", "tracing"] }
rustico = { path = "../rustico" }
warp = { version = "0.3", default-features = false }
nom = "7"
leaky-bucket = "0.12.4"
rusto-utils = { path = "../rusto-utils" }

# tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", optional = true }
console-subscriber = { version = "0.1", optional = true }

# telemetry
opentelemetry = { version = "0.18", optional = true, features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.18", optional = true }
opentelemetry-jaeger = { version = "0.17", optional = true, features = ["rt-tokio"] }
# In the future, replace opentelemetry-jaeger with this:
# opentelemetry-otlp = { version = "0.12", optional = true, features = ["grpc-tonic" ]}
